@@ -25,13 +25,13 @@ public interface GenericService <T extends BaseEntity, D, I> {
     default List<D> findAllDto(Class<D> clazz){
         return getRepository().findAll().stream()
                 .map(model -> getMapper().map(model, clazz))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     default List<D> findAllDto(Pageable page, Class<D> clazz){
         return getRepository().findAll(page).stream()
                 .map(model -> getMapper().map(model, clazz))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     default Optional<T> findById(I id){
